--- a/src/scss/eventide-rp-system.scss
+++ b/src/scss/eventide-rp-system.scss
@@ -11,6 +11,7 @@
 @import 'global/window';
 @import 'global/grid';
 @import 'global/flex';
+@import 'global/roll-cards';
 
 /* Styles limited to eventide-rp-system sheets */
 .eventide-rp-system {
