--- a/src/scss/global/_roll-cards.scss
+++ b/src/scss/global/_roll-cards.scss
@@ -1,7 +1,7 @@
 .eventide-critical-hit {
     color: white;
     background-color: #261282;
-    text-align:center;
+    text-align: center;
     padding: 0.875rem;
     font-size: 1.125rem;
     margin-bottom: 0px;
@@ -11,8 +11,8 @@
 .eventide-critical-miss {
     color: white;
     background-color: #4e0101;
-    text-align:center;
-    padding: 0.875rem;  
+    text-align: center;
+    padding: 0.875rem;
     font-size: 1.125rem;
     margin-bottom: 0px;
     margin-top: 0px;
@@ -21,7 +21,7 @@
 .eventide-acro-card {
     color: white;
     background-color: #a63b01;
-    text-align:center;
+    text-align: center;
     padding: 0.875rem;
     font-size: 1.125rem;
     margin-bottom: 0px;
@@ -30,7 +30,7 @@
 .eventide-phys-card {
     color: white;
     background-color: #910303;
-    text-align:center;
+    text-align: center;
     padding: 0.875rem;
     font-size: 1.125rem;
     margin-bottom: 0px;
@@ -39,7 +39,7 @@
 .eventide-fort-card {
     color: white;
     background-color: #285828;
-    text-align:center;
+    text-align: center;
     padding: 0.875rem;
     font-size: 1.125rem;
     margin-bottom: 0px;
@@ -48,7 +48,7 @@
 .eventide-will-card {
     color: white;
     background-color: #79088d;
-    text-align:center;
+    text-align: center;
     padding: 0.875rem;
     font-size: 1.125rem;
     margin-bottom: 0px;
@@ -57,7 +57,7 @@
 .eventide-wits-card {
     color: white;
     background-color: #0e4380;
-    text-align:center;
+    text-align: center;
     padding: 0.875rem;
     font-size: 1.125rem;
     margin-bottom: 0px;
@@ -66,7 +66,7 @@
 .eventide-item-card {
     color: white;
     background-color: #8B4513;
-    text-align:center;
+    text-align: center;
     padding: 0.875rem;
     font-size: 1.125rem;
     margin-bottom: 0px;
@@ -75,7 +75,7 @@
 .eventide-combat-power-card {
     color: white;
     background-color: #B8860B;
-    text-align:center;
+    text-align: center;
     padding: 0.875rem;
     font-size: 1.125rem;
     margin-bottom: 0px;
@@ -84,7 +84,7 @@
 .eventide-dice-dc-card {
     color: white;
     background-color: #1C424D;
-    text-align:center;
+    text-align: center;
     padding: 0.875rem;
     font-size: 1.125rem;
     margin-bottom: 0px;
@@ -93,8 +93,16 @@
 .eventide-unknown-card {
     color: white;
     background-color: #535353;
-    text-align:center;
+    text-align: center;
     padding: 0.875rem;
     font-size: 1.125rem;
     margin-bottom: 0px;
+}
+
+.eventide-card-description {
+    color: rgb(78, 77, 77);
+    text-align: justify;
+    border: #535353;
+    font-size: 0.9rem;
+    padding: 0.01rem;
 }
