--- a/src/scss/global/_window.scss
+++ b/src/scss/global/_window.scss
@@ -1,5 +1,7 @@
+@use "../utils/typography";
+
 .window-app {
-  font-family: $font-primary;
+  font-family: typography.$font-primary;
 }
 
 .rollable {
