Added css for damage cards.

--- a/src/scss/global/_roll-cards.scss
+++ b/src/scss/global/_roll-cards.scss
@@ -108,6 +108,15 @@
     margin-bottom: 0px;
 }
 
+.eventide-damage-card {
+    color: white;
+    background-color: #580303;
+    text-align: center;
+    padding: 0.875rem;
+    font-size: 1.125rem;
+    margin-bottom: 0px;
+}
+
 .eventide-status-delete-card {
     color: white;
     background-color: #555555;
