--- a/src/scss/global/_roll-cards.scss
+++ b/src/scss/global/_roll-cards.scss
@@ -117,6 +117,16 @@
     margin-bottom: 0px;
 }
 
+.eventide-heal-card {
+    color: white;
+    background-color: #cb8e00;
+    text-align: center;
+    padding: 0.875rem;
+    font-size: 1.125rem;
+    margin-bottom: 0px;
+}
+
+
 .eventide-status-delete-card {
     color: white;
     background-color: #555555;
