--- a/src/scss/eventide-rp-system.scss
+++ b/src/scss/eventide-rp-system.scss
@@ -11,6 +11,7 @@
 @use 'global/grid';
 @use 'global/flex';
 @use 'global/roll-cards';
+@use 'global/character-sheet';
 
 /* Styles limited to eventide-rp-system sheets */
 .eventide-rp-system {
