--- a/src/scss/global/_roll-cards.scss
+++ b/src/scss/global/_roll-cards.scss
@@ -1,154 +1,82 @@
-.eventide-critical-hit {
-    color: white;
-    background-color: #261282;
+@use "../utils/colors"as *;
+
+.eventide-roll-card {
+    color: $c-white;
     text-align: center;
     padding: 0.875rem;
     font-size: 1.125rem;
     margin-bottom: 0px;
     margin-top: 0px;
+}
+
+.eventide-critical-hit {
+    background-color: $critical-hit;
 }
 
 .eventide-critical-miss {
-    color: white;
-    background-color: #4e0101;
-    text-align: center;
-    padding: 0.875rem;
-    font-size: 1.125rem;
-    margin-bottom: 0px;
-    margin-top: 0px;
+    background-color: $critical-miss;
 }
 
 .eventide-acro-card {
-    color: white;
-    background-color: #a63b01;
-    text-align: center;
-    padding: 0.875rem;
-    font-size: 1.125rem;
-    margin-bottom: 0px;
+    background-color: $acro-color;
 }
 
 .eventide-phys-card {
-    color: white;
-    background-color: #910303;
-    text-align: center;
-    padding: 0.875rem;
-    font-size: 1.125rem;
-    margin-bottom: 0px;
+    background-color: $phys-color;
 }
 
 .eventide-fort-card {
-    color: white;
-    background-color: #285828;
-    text-align: center;
-    padding: 0.875rem;
-    font-size: 1.125rem;
-    margin-bottom: 0px;
+    background-color: $fort-color;
 }
 
 .eventide-will-card {
-    color: white;
-    background-color: #79088d;
-    text-align: center;
-    padding: 0.875rem;
-    font-size: 1.125rem;
-    margin-bottom: 0px;
+    background-color: $will-color;
 }
 
 .eventide-wits-card {
-    color: white;
-    background-color: #0e4380;
-    text-align: center;
-    padding: 0.875rem;
-    font-size: 1.125rem;
-    margin-bottom: 0px;
+    background-color: $wits-color;
 }
 
 .eventide-item-card {
-    color: white;
-    background-color: #8B4513;
-    text-align: center;
-    padding: 0.875rem;
-    font-size: 1.125rem;
-    margin-bottom: 0px;
+    background-color: $item-color;
 }
 
 .eventide-combat-power-card {
-    color: white;
-    background-color: #B8860B;
-    text-align: center;
-    padding: 0.875rem;
-    font-size: 1.125rem;
-    margin-bottom: 0px;
+    background-color: $combat-power-color;
 }
 
 .eventide-dice-dc-card {
-    color: white;
-    background-color: #1C424D;
-    text-align: center;
-    padding: 0.875rem;
-    font-size: 1.125rem;
-    margin-bottom: 0px;
+    background-color: $dc-color;
 }
 
 .eventide-unknown-card {
-    color: white;
-    background-color: #535353;
-    text-align: center;
-    padding: 0.875rem;
-    font-size: 1.125rem;
-    margin-bottom: 0px;
+    background-color: $unknown-color;
 }
 
 .eventide-status-card {
     display: flex;
     justify-content: center;
-    text-align: center;
-    padding: 0.875rem;
-    font-size: 1.125rem;
-    margin-bottom: 0px;
 }
 
 .eventide-damage-card {
-    color: white;
-    background-color: #580303;
-    text-align: center;
-    padding: 0.875rem;
-    font-size: 1.125rem;
-    margin-bottom: 0px;
+    background-color: $damage-color;
 }
 
 .eventide-heal-card {
-    color: white;
-    background-color: #cb8e00;
-    text-align: center;
-    padding: 0.875rem;
-    font-size: 1.125rem;
-    margin-bottom: 0px;
+    background-color: $heal-color;
 }
 
-
 .eventide-status-delete-card {
-    color: white;
-    background-color: #555555;
-    text-align: center;
-    padding: 0.875rem;
-    font-size: 1.125rem;
-    margin-bottom: 0px;
+    background-color: $delete-color;
 }
 
 .eventide-restore-card {
-    color: white;
-    background-color: #cb8e00;
-    text-align: center;
-    padding: 0.875rem;
-    font-size: 1.125rem;
-    margin-bottom: 0px;
+    background-color: $heal-color;
 }
 
 .eventide-card-description {
-    color: rgb(78, 77, 77);
+    color: $c-tan;
     text-align: justify;
-    border: #535353;
     font-size: 0.9rem;
     padding: 0.01rem;
 }
@@ -157,7 +85,7 @@
     text-align: justify;
     font-size: 0.7rem;
     padding: 0rem;
-    color: rgb(143, 143, 143);
+    color: $c-tan;
 }
 
 .eventide-card-effects-title {
@@ -166,14 +94,14 @@
     padding: 0.01rem;
     padding-top: 0.2rem;
     padding-bottom: 0.2rem;
-    background-color: #7B4874;
+    background-color: $acro-color;
     color: white;
 }
 
 .eventide-card-name {
     text-align: justify;
     font-size: 1.2rem;
-    color: rgb(78, 77, 77);
+    color: $c-tan;
 }
 
 .eventide-card-primary-image {
@@ -190,25 +118,25 @@
 
 .eventide-card-hr {
     border: none;
-    border-top: 2px solid #7B4874;
+    border-top: 2px solid $hr-color;
 }
 
 .eventide-card-hit-box {
-    background-color: #50C877;
+    background-color: $hit-color;
     color: white;
     text-align: center;
     padding: 0.0875rem;
     font-size: 0.7rem;
     margin-bottom: 0px;
-    border: 1px solid #FFFFFF;
+    border: 1px solid $c-white;
 }
 
 .eventide-card-miss-box {
-    background-color: #C70039;
+    background-color: $miss-color;
     color: white;
     text-align: center;
     padding: 0.0875rem;
     font-size: 0.7rem;
     margin-bottom: 0px;
-    border: 1px solid #FFFFFF;
+    border: 1px solid $c-white;
 }
