--- a/src/scss/utils/_colors.scss
+++ b/src/scss/utils/_colors.scss
@@ -5,3 +5,26 @@ $c-dark: #191813;
 $c-faint: #c9c7b8;
 $c-beige: #b5b3a4;
 $c-tan: #444;
+
+$acro-color: #a63b01;
+$phys-color: #910303;
+$fort-color: #285828;
+$will-color: #79088d;
+$wits-color: #0e4380;
+
+$critical-hit: #261282;
+$critical-miss: #4e0101;
+
+$item-color: #8B4513;
+$combat-power-color: #B8860B;
+$dc-color: #1C424D;
+$unknown-color: #535353;
+$damage-color: #580303;
+$heal-color: #cb8e00;
+$effect-color: #8B4513;
+$delete-color: #555555;
+
+$hit-color: #50C877;
+$miss-color: #C70039;
+
+$hr-color: #c9c7b8;
